Telefon raqam yangilandi

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <main>
     <div class="links">
-      <a href="tel:+998919871717"><i class="fa-solid fa-phone"></i> Telefon: +99891 9871717</a>
+      <a href="tel:+998919871717"><i class="fa-solid fa-phone"></i> Telefon: +998 91 987 17 17</a>
       <a href="https://t.me/exclusive_premium_house" target="_blank"><i class="fa-brands fa-telegram"></i> Telegram</a>
       <a href="https://www.instagram.com/exclusive_premium_house_?utm_source=ig_web_button_share_sheet&igsh=bDA3aG1sMm1kcW5k" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
       <a href="https://maps.app.goo.gl/KU5Vykm299NsTpR26" target="_blank"><i class="fa-solid fa-location-dot"></i> Lokatsiya</a>
